# systemProject

./: configfile.properties  pyproject.toml
.github/workflows/: ci.yml
src/systemadmin/: database.py  files.py
src/utils/: utils.py
tests/: __init__.py  test_files.py
