[tool.poetry]
name = "systemadmin"
version = "0.1.0"
description = ""
authors = ["bachir <bachir.mourabit.pro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
files = "^1.1.1"
configparser = "^5.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
